fixed issues with contact page and increased footer and nav text contrast

--- a/css/my-css.css
+++ b/css/my-css.css
@@ -157,11 +157,11 @@ p{
     display: flex;
     margin-bottom: 20px;
     flex-wrap: wrap;
+    /* max-height: 600px; */
 }
 
 
 /* contacts */
-
 #contact-title {
     text-align: center;
     color: #e67e22;
@@ -169,8 +169,6 @@ p{
 
 .contact-form {
     max-width: 700px;
-    /* background-color: rgba(164, 168, 164, 0.5); */
-    /* padding: 40px; */
     flex-direction:column;
     justify-content: space-around;
     flex-shrink: 1;
@@ -189,6 +187,11 @@ p{
 
 .contact-form h1 {
     text-align: center;
+}
+
+.contact-form h2 {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .contact-form form {
@@ -243,18 +246,25 @@ p{
 .map {
     flex-direction: column;
     justify-content: space-around;
-    flex-shrink: 1;
-    flex-grow: 1;
-    flex-basis: 25%;
-    max-width: 550px;
+    height: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    overflow:hidden;
+    /* padding-bottom:56.25%; */
+    padding-bottom: 30%;
+    position:relative;
+    height:0;
     margin: 0 auto;
 }
 
 .map iframe {
-     margin-left: 20px;
-     margin-right: 20px;
+    /* left:0;
+    top:0; */
+    height:100%;
+    max-height: 450px;
+    width:100%;
+    position:absolute;
 }
-
 
 /* galley */
 .gallery {
@@ -284,15 +294,9 @@ p{
 .gallery p { margin-top: .5rem; }
 
 .gallery img {
-    /* background-color: #d6d6d1; */
-    /* margin-bottom: 45px; */
-    /* padding: 10px; */
     max-width: 100%;
     height: auto;
-    /* margin: 0 auto; */
-    /* max-width: 320px; */
     max-height: 400px;
-    /* font-size: 30px; */
     object-fit: cover;
     object-fit: contain;
 }
@@ -301,7 +305,6 @@ p{
     display: flex;
     background-color: #3498db;
     flex-direction:row;
-    /* flex-wrap: wrap; */
     justify-content: space-around;
     align-items: center;
     flex-shrink: 1;
@@ -319,11 +322,6 @@ p{
         width: 100%;
         margin-top: 0;
     }
-
-    /* .services .col-25, .services .col-75 {
-        margin: 0 auto;
-        width: 90%;
-    } */
 
     .booking li, .booking h2 {
         margin-left: 10px;
@@ -375,12 +373,10 @@ p{
     body {
         background-image: url('../images/try8.jpg');
         background-repeat: no-repeat;
-        /* background-size: 100% 100%; */
         background-size: cover;
         background-attachment:fixed;
         height: 100%;
         margin: 0 auto;
-
         background-position: center top;
         background-blend-mode: color-burn;
         background-color: rgba(255, 255, 255, 0.8);
@@ -412,7 +408,7 @@ p{
         display: flex;
         width: 100%;
         position: relative;
-        background-color: #767c83;
+        background-color: #5b5f64;
         border-radius: 8px;
         justify-content: flex-end;
         flex-wrap: wrap;
@@ -421,7 +417,7 @@ p{
     nav p {
         margin-right: auto;
         margin-left:10px;
-        color: #92e787;;
+        color: #b8e4b2;
     }
 
     input[type='checkbox']:not(:checked)+.menu_control links {
@@ -664,23 +660,8 @@ p{
         /* max-width: 50%; */
     }
 
-    
-    .contact-form {
-        /* max-width: 800px; */
-        /* background-color: rgba(164, 168, 164, 0.5); */
-        /* padding: 40px; */
-
-        /* margin: 20px auto; */
-    }
-
     .map {
-        flex-direction:column;
-        flex-shrink: 1;
-        justify-content: space-around;
-        flex-grow: 1;
         flex-basis: 25%;
-        /* max-width: 800px; */
-        /* margin: 0 auto; */
     }
 
 }
@@ -746,7 +727,21 @@ p{
         flex-shrink: 1;
         flex-grow: 1;
         flex-basis: 25%;
+        align-items: center;
     }
+
+    .map {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    overflow:hidden;
+    padding-bottom:56.25%;
+    /* padding-bottom: 30%; */
+    position:relative;
+    height:0;
+}
 }
 
 @media screen and (min-width: 1300px) {
@@ -793,7 +788,7 @@ p{
 footer {
     clear:both;
     position: relative;
-    background-color: #767c83;
+    background-color: #5b5f64;
     border-radius: 8px;
     padding: 10px 20px 10px 20px;
 }
